# stock-predictor

./: .gitignore  app.py  backend.py  deploy.sh  main.py  pyproject.toml  start.sh
data/: 0100.HK.csv  0700.HK.csv  1024.HK.csv  1810.HK.csv  2513.HK.csv  3690.HK.csv  AAPL.csv  AMZN.csv  BABA.csv  BIDU.csv  BILI.csv  BTC-USD.csv  DUK.csv  ETH-USD.csv  GLD.csv  GOOGL.csv  JD.csv  META.csv  MSFT.csv  MU.csv  NEE.csv  NRGV.csv  NVDA.csv  PDD.csv  PLTR.csv  QQQ.csv  SOL-USD.csv  SPY.csv  STX.csv  TLT.csv  TSLA.csv  UUP.csv  VIX.csv  WDC.csv
docs/: 用户使用指南.md  课程作业报告.md  项目技术深度解析.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BacktestChart.tsx  CandlestickChart.tsx  FeatureImportance.tsx  Hero.tsx  MetricCard.tsx  ModelSignals.tsx  PredictionCard.tsx  RadarChart.tsx  SectionHeader.tsx
frontend/src/lib/: api.ts
models/: GLD_models.pkl  GOOGL_models.pkl  PLTR_models.pkl
src/: backtest.py  config.py  data_fetcher.py  features.py  model.py
