[project]
name = "stock-predictor"
version = "0.1.0"
description = "ML-based stock prediction for QQQ, GOOGL, PLTR"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "ta>=0.11",
    "plotly>=5.22",
    "mplfinance>=0.12",
    "streamlit>=1.35",
    "joblib>=1.4",
    "shap>=0.45",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
]
